--- a/app/views/authors/new.html.erb
+++ b/app/views/authors/new.html.erb
@@ -1,6 +1,20 @@
 <h2>Create an Author</h2>
 <%= form_tag authors_path, method: "post" do %>
-  <div class="field">
+
+<% if @author.errors.any? %>
+    <div id="error_explanation">
+      <h2>There were some errors:</h2>
+      <ul>
+        <% @author.errors.full_messages.each do |msg| %>
+          <li><%= msg %></li>
+        <% end %>
+      </ul>
+    </div>
+  <% end %>
+
+  <div class="field<%= ' field_with_errors' if @author.errors[:name].any? %>">
+
+
     <%= label_tag "name", "Name" %>
     <%= text_field_tag "name" %>
   </div>
