--- a/app/views/authors/new.html.erb
+++ b/app/views/authors/new.html.erb
@@ -15,7 +15,7 @@
   <div class="field<%= ' field_with_errors' if @author.errors[:name].any? %>">
 
     <%= label_tag "name", "Name" %>
-    <%= text_field_tag "name" , @author.name %>
+    <%= text_field_tag "name", @author.name %>
   </div>
 
   <div class="field <%= ' field_with_errors' if @author.errors[:email].any? %>">
@@ -23,7 +23,7 @@
     <%= text_field_tag "email", @author.email %>
   </div>
 
-  <div class="field" <%= ' field_with_errors' if @author.errors[:phone_number].any? %>
+  <div class="field<%= ' field_with_errors' if @author.errors[:phone_number].any? %>">
     <%= label_tag "phone_number", "Phone Number" %>
     <%= text_field_tag "phone_number", @author.phone_number %>
   </div>
